<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="30dp"
        android:gravity="center_horizontal">

        <TextView
            style="@style/viewParent.headerText"
            android:text="@string/create_new_account" />

        <EditText
            style="@style/inputText"
            android:id="@+id/edt_sign_up_name"
            android:layout_marginTop="50dp"
            android:drawableStart="@drawable/ic_profile_on_edittext"
            android:inputType="text"
            android:hint="@string/name"
            />

        <EditText
            style="@style/inputText"
            android:id="@+id/edt_sign_up_email"
            android:layout_marginTop="15dp"
            android:drawableStart="@drawable/ic_message"
            android:inputType="textEmailAddress"
            android:hint="@string/email"
            />

        <EditText
            style="@style/inputText"
            android:id="@+id/edt_sign_up_password"
            android:layout_marginTop="15dp"
            android:drawableStart="@drawable/ic_lock"
            android:inputType="textPassword"
            android:hint="@string/password"
            />

        <EditText
            style="@style/inputText"
            android:id="@+id/edt_sign_up_confirm_password"
            android:layout_marginTop="15dp"
            android:drawableStart="@drawable/ic_lock"
            android:inputType="textPassword"
            android:hint="@string/confirm_password"
            />
        <EditText
            style="@style/inputText"
            android:id="@+id/edt_sign_up_address"
            android:layout_marginTop="15dp"
            android:drawableStart="@drawable/ic_location"
            android:focusable="false"
            android:inputType="none"
            android:hint="@string/address"
            />

        <Button
            style="@style/buttonRegLog"
            android:layout_marginTop="15dp"
            android:text="@string/sign_up"
            android:id="@+id/btn_sign_up"/>

        <LinearLayout android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_gravity="center"
            android:layout_marginTop="10dp">
            <TextView android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/already_have_an_account"
                android:textSize="14sp"
                android:textColor="@color/primary_text"
                android:layout_marginEnd="5dp"
                />
            <TextView android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/tv_sign_up_sign_in"
                android:text="@string/sign_in"
                android:textSize="14sp"
                android:textColor="@color/link"/>
        </LinearLayout>

    </LinearLayout>
</layout>
